# full-featured-social-media-site-with-flask-2.0

./: README.md  database lecture  package lecture.txt  pyproject.toml  requirements.txt
03.Forms and Validation/: app.py
04.Databases/: app.py  forms.py
05.Package-Structure/app/: __init__.py
06. Login and Authentication/app/: __init__.py  forms.py  models.py  routes.py  test.db
06. Login and Authentication/app/templates/: layout.html
