[tool.poetry]
name = "flask_social_media_site"
version = "0.1.0"
description = ""
authors = ["zubairwazir <zubairwazir777@gamil.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
