[tool.poetry]
name = "flask-tutoring-blog-site"
version = "0.1.0"
description = ""
authors = ["Zubair Ahmad"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
MyApplication = "^0.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
